[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/default.png" type="Texture" id=1]
[ext_resource path="res://src/Hunter/Shotgun.gd" type="Script" id=2]
[ext_resource path="res://assets/shoot.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 201.3

[node name="Shotgun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12.4507, 0.110184 )
scale = Vector2( 0.0426976, 0.0050512 )
texture = ExtResource( 1 )

[node name="GunBarrelPosition" type="Position2D" parent="."]
position = Vector2( 29.7494, -0.440731 )

[node name="ShotAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ShotSoundArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotSoundArea"]
shape = SubResource( 1 )

[node name="ShotSoundTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="body_entered" from="ShotSoundArea" to="." method="_on_ShotSoundArea_body_entered"]
[connection signal="timeout" from="ShotSoundTimer" to="." method="_on_ShotSoundTimer_timeout"]
